name:                search
version:             0.1.0.0
synopsis:            AI search algorithms
description:         Please see README.md
homepage:            https://github.com/caneroj1/search#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Canero
maintainer:          jmc41493@gmail.com
copyright:           Copyright: (c) 2016 Joe Canero
category:            Control
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Search
                     , Control.Search.BFS
                     , Control.Search.CostBasedSearch
                     , Control.Search.DFS
                     , Control.Search.Internal.Depth
                     , Control.Search.Internal.DepthSearch
                     , Control.Search.Internal.ExploredSet
                     , Control.Search.Internal.Container
                     , Control.Search.Internal.Frontier
                     , Control.Search.Internal.MapSet
                     , Control.Search.Internal.Path
                     , Control.Search.Internal.Queue
                     , Control.Search.Internal.SearchUtils
                     , Control.Search.Internal.Stack
                     , Control.Search.Internal.UniformCostSearch
                     , Control.Search.Internal.Weights
                     , Control.Search.PathFunctions
                     , Control.Search.Types
  build-depends:       base >= 4.7 && < 5
                     , containers
  default-language:    Haskell2010

executable search-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , search
  default-language:    Haskell2010

test-suite search-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       UninformedSearch.GetToBucharest
                     , UninformedSearch.Problem1
                     , UninformedSearch.Problem2
                     , UninformedSearch.SlidingBlock
                     , UninformedSearch.TestAStar
                     , UninformedSearch.TestBFS
                     , UninformedSearch.TestDFS
                     , UninformedSearch.TestDFSLimited
                     , UninformedSearch.TestGreedy
                     , UninformedSearch.TestSlidingBlock
                     , UninformedSearch.TestUCS
                     , UnitTests.MapSetUnitTests
                     , UnitTests.PathFunctionsUnitTests
                     , UnitTests.WeightsUnitTests
  main-is:             Spec.hs
  build-depends:       base
                     , search
                     , containers
                     , unordered-containers
                     , HUnit
                     , lens
                     , array
                     , hashable
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/caneroj1/search
